sumo/tests/sumo/pedestrian_model/striping/errors/disconnected_route_ignore/errors.sumo
Warning: No connection between ':C_w1' and 'CW_bwd_connector' found.
